--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
   <body>
     <h1>Hello Cullen!</h1>
     <h2>jQuery Intro</h2>
+
+    <ul>
+      <li class="the-best">Child 1</li>
+      <li>Child 2</li>
+      <li>Child 3</li>
+    </ul>
   </body>
 </html>
