add brand and input box

--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
       <li>Child 2</li>
       <li>Child 3</li>
     </ul>
+
+    <label for="brand">Harmonica Brand</label>
+    <input type="text" id="brand" placeholder="Harmonica Brand" />
+
+    <select></select>
   </body>
 </html>
