--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <label for="brand">Harmonica Brand</label>
     <input type="text" id="brand" placeholder="Harmonica Brand" />
 
-    <select></select>
+    <select>
+      <option>Special 20</option>
+      <option>Rocket</option>
+      <option>Marine Band</option>
+    </select>
   </body>
 </html>
