--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
       <option>Rocket</option>
       <option>Marine Band</option>
     </select>
+
+    <input type="radio" id="male" name="mode" value="male" />
+    <label for="male">Major</label><br />
+    <input type="radio" id="female" name="mode" value="female" />
+    <label for="female">Minor</label><br />
   </body>
 </html>
