--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
     <label for="male">Major</label><br />
     <input type="radio" id="female" name="mode" value="female" />
     <label for="female">Minor</label><br />
+
+    <input id="submitButton" type="submit" value="Submit!" />
   </body>
 </html>
