add rendered date to dom

--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
     <label for="female">Minor</label><br />
 
     <input id="submitButton" type="submit" value="Submit!" />
+
+    <ul id="harmonicas"></ul>
   </body>
 </html>
