--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
       <li>Child 3</li>
     </ul>
 
-    <label for="brand">Harmonica Brand</label>
-    <input type="text" id="brand" placeholder="Harmonica Brand" />
+    <form>
+      <label for="brand">Harmonica Brand</label>
+      <input type="text" id="brand" placeholder="Harmonica Brand" />
 
-    <select>
-      <option>Special 20</option>
-      <option>Rocket</option>
-      <option>Marine Band</option>
-    </select>
+      <select>
+        <option>Special 20</option>
+        <option>Rocket</option>
+        <option>Marine Band</option>
+      </select>
 
-    <input type="radio" id="male" name="mode" value="male" />
-    <label for="male">Major</label><br />
-    <input type="radio" id="female" name="mode" value="female" />
-    <label for="female">Minor</label><br />
+      <input type="radio" id="male" name="mode" value="male" />
+      <label for="male">Major</label><br />
+      <input type="radio" id="female" name="mode" value="female" />
+      <label for="female">Minor</label><br />
 
-    <input id="submitButton" type="submit" value="Submit!" />
+      <input id="submitButton" type="submit" value="Submit!" />
+    </form>
 
     <ul id="harmonicas"></ul>
   </body>
